--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       <h2>Let's Dare to Dream.</h2>
     </header>
     <div class="profile-bio">
-      <p>IT System Analyst & Blogger, Dreamer!</p>
-      <i>""</i>
+      <p>IT System Analyst & Part Time Blogger</p>
+      <i>"The biggest adventure you can take is to live the life of your dreams." - Oprah Winfrey</i>
     </div>
     <ul class="profile-social-links">
       <li onclick="trackClick()">
