Reduced website loading time

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         <img src="./assets/rajat.jpg" alt="Rajat profile pic" />
       </a>
       <h1>Rajat Patel</h1>
-      <h2>Let's Dare to Dream.</h2>
+      <h2>IT System Analyst, Blogger, Dreamer!</h2>
     </header>
     <div class="profile-bio">
-      <p>IT System Analyst & Part Time Blogger</p>
+      <p>Let's Dare to Dream.</p>
       <i>"The biggest adventure you can take is to live the life of your dreams." - Oprah Winfrey</i>
     </div>
     <ul class="profile-social-links">
