--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!--<meta name="google-site-verification" content="I4_hULZxkuy_0GtDQ3cPNPsyb1FLK-L2I5XyXqDzHi4" />-->
   <meta href="https://google.com/+RajatPatel92" rel="author">
   <meta href="https://plus.google.com/+RajatPatel92" rel="publisher">
-  <title>Rajat Patel - Hey Dreamer, Let's Create</title>
+  <title>Rajat Patel - IT System Analyst & Blogger</title>
   <link rel="license" href="https://github.com/VikramTiwari/vikramtiwari.github.com/blob/master/LICENSE">
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="style.css" media="screen" sizes="any">
@@ -59,10 +59,10 @@
         <img src="./assets/rajat.jpg" alt="Rajat profile pic" />
       </a>
       <h1>Rajat Patel</h1>
-      <h2>IT System Analyst, Blogger, Dreamer!</h2>
+      <h2>IT System Analyst, Blogger, Programmer</h2>
     </header>
     <div class="profile-bio">
-      <p>Let's Dare to Dream.</p>
+      <p>Contributor of <a href="https://forum.xda-developers.com/android/software-hacking/tool-6-feb-android-flashable-zip-t3551772" target="_blank">Flashable Zip Creator</a></p>
       <i>"The biggest adventure you can take is to live the life of your dreams." - Oprah Winfrey</i>
     </div>
     <ul class="profile-social-links">
@@ -90,6 +90,34 @@
           </svg>
         </a>
       </li>
+	  <li onclick="trackClick()">
+			<a href="https://instagram.com/rajatpatel92/" target="_blank" rel="noopener">
+				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="20px" height="20px" viewBox="0 0 510 500" style="enable-background:new 0 0 510 510;" xml:space="preserve">
+					<path d="M459,0H51C22.95,0,0,22.95,0,51v408c0,28.05,22.95,51,51,51h408c28.05,0,51-22.95,51-51V51C510,22.95,487.05,0,459,0z     M255,153c56.1,0,102,45.9,102,102c0,56.1-45.9,102-102,102c-56.1,0-102-45.9-102-102C153,198.9,198.9,153,255,153z M63.75,459    C56.1,459,51,453.9,51,446.25V229.5h53.55C102,237.15,102,247.35,102,255c0,84.15,68.85,153,153,153c84.15,0,153-68.85,153-153    c0-7.65,0-17.85-2.55-25.5H459v216.75c0,7.65-5.1,12.75-12.75,12.75H63.75z M459,114.75c0,7.65-5.1,12.75-12.75,12.75h-51    c-7.65,0-12.75-5.1-12.75-12.75v-51c0-7.65,5.1-12.75,12.75-12.75h51C453.9,51,459,56.1,459,63.75V114.75z" fill="#875e52"
+					/>
+				</svg>
+			</a>
+		</li>
+		<li onclick="trackClick()">
+			<a href="https://plus.google.com/+RajatPatel92/" target="_blank" rel="noopener">
+				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="32px" height="32px" viewBox="0 75 510 510" style="enable-background:new 0 0 510 510;" xml:space="preserve">
+					<path d="M377.472,224.957H201.319v58.718H308.79c-16.032,51.048-63.714,88.077-120.055,88.077     c-69.492,0-125.823-56.335-125.823-125.824c0-69.492,56.333-125.823,125.823-125.823c34.994,0,66.645,14.289,89.452,37.346     l42.622-46.328c-34.04-33.355-80.65-53.929-132.074-53.929C84.5,57.193,0,141.693,0,245.928s84.5,188.737,188.736,188.737     c91.307,0,171.248-64.844,188.737-150.989v-58.718L377.472,224.957L377.472,224.957z" fill="#d73d32"/>
+					<polygon points="491.858,224.857 455.827,224.857 455.827,188.826 424.941,188.826 424.941,224.857 388.91,224.857      388.91,255.74 424.941,255.74 424.941,291.772 455.827,291.772 455.827,255.74 491.858,255.74    " fill="#d73d32"/>
+				</svg>
+			</a>
+		</li>
+		<li onclick="trackClick()">
+			<a href="https://forum.xda-developers.com/member.php?u=1852653/" target="_blank" rel="noopener">
+				<svg width="32pt" height="32pt" viewBox="0 150 355 355" version="1.1" xmlns="http://www.w3.org/2000/svg">
+					<path fill="#ffffff" d=" M 0.00 0.00 L 355.00 0.00 L 355.00 355.00 L 0.00 355.00 L 0.00 243.00 C 7.70 242.99 15.41 243.01 23.11 242.99 C 35.65 227.22 48.09 211.37 60.64 195.60 C 73.37 211.36 85.99 227.21 98.70 242.99 C 106.57 243.01 114.43 243.01 122.30 242.99 C 105.65 222.18 88.94 201.42 72.28 180.62 C 87.30 161.73 102.40 142.90 117.43 124.01 C 109.56 123.99 101.70 124.00 93.84 124.01 C 82.74 137.92 71.73 151.89 60.63 165.80 C 49.62 151.88 38.64 137.94 27.63 124.01 C 19.76 123.99 11.89 123.99 4.01 124.01 C 19.00 142.89 34.03 161.73 49.00 180.62 C 32.69 201.15 16.28 221.62 0.00 242.18 L 0.00 0.00 Z" />
+					<path fill="#ffaf32" d=" M 286.76 125.68 C 291.68 121.81 299.12 122.34 303.97 126.07 C 307.49 128.74 309.57 132.81 311.17 136.84 C 325.39 172.23 339.67 207.59 353.87 242.99 C 347.12 243.01 340.39 243.00 333.65 243.00 C 330.31 234.72 327.02 226.42 323.70 218.13 C 304.69 218.13 285.68 218.10 266.67 218.15 C 263.32 226.43 259.93 234.70 256.58 242.98 C 249.83 243.02 243.08 243.00 236.33 242.99 C 250.70 207.51 265.12 172.05 279.51 136.57 C 281.14 132.52 283.21 128.40 286.76 125.68 Z" />
+					<path fill="#ffaf32" d=" M 4.01 124.01 C 11.89 123.99 19.76 123.99 27.63 124.01 C 38.64 137.94 49.62 151.88 60.63 165.80 C 71.73 151.89 82.74 137.92 93.84 124.01 C 101.70 124.00 109.56 123.99 117.43 124.01 C 102.40 142.90 87.30 161.73 72.28 180.62 C 88.94 201.42 105.65 222.18 122.30 242.99 C 114.43 243.01 106.57 243.01 98.70 242.99 C 85.99 227.21 73.37 211.36 60.64 195.60 C 48.09 211.37 35.65 227.22 23.11 242.99 C 15.41 243.01 7.70 242.99 0.00 243.00 L 0.00 242.18 C 16.28 221.62 32.69 201.15 49.00 180.62 C 34.03 161.73 19.00 142.89 4.01 124.01 Z" />
+					<path fill="#ffaf32" d=" M 132.43 124.02 C 154.63 123.98 176.83 124.01 199.02 124.00 C 205.45 123.94 212.12 125.59 217.13 129.78 C 223.42 134.86 226.95 142.90 226.93 150.94 C 226.98 171.64 226.96 192.35 226.94 213.05 C 226.99 220.41 224.60 228.01 219.27 233.26 C 212.63 239.76 203.22 243.26 193.96 243.01 C 173.45 242.98 152.94 243.03 132.43 242.98 C 132.44 203.33 132.44 163.67 132.43 124.02 Z" />
+					<path fill="#ffffff" d=" M 151.38 141.14 C 165.58 141.12 179.79 141.12 194.00 141.13 C 197.72 141.24 202.03 141.34 204.82 144.18 C 207.36 147.14 207.85 151.27 208.02 155.02 C 208.00 173.69 208.02 192.36 208.00 211.03 C 207.98 215.02 207.38 219.41 204.51 222.43 C 201.83 225.26 197.72 225.93 194.00 225.87 C 179.79 225.87 165.58 225.89 151.37 225.86 C 151.38 197.62 151.38 169.38 151.38 141.14 Z" />
+					<path fill="#ffffff" d=" M 294.81 147.06 C 302.17 165.02 309.44 183.01 316.75 200.98 C 302.38 201.01 288.01 201.00 273.64 200.99 C 280.68 183.01 287.77 165.04 294.81 147.06 Z" />
+				</svg>
+			</a>
+		</li>
     </ul>
   </aside>
 </body>
