--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </header>
     <div class="profile-bio">
       <p>Contributor of <a href="https://forum.xda-developers.com/android/software-hacking/tool-6-feb-android-flashable-zip-t3551772" target="_blank">Flashable Zip Creator</a></p>
-      <i>"The biggest adventure you can take is to live the life of your dreams." - Oprah Winfrey</i>
+      <i>"The biggest adventure you can take is to live the life of your dreams."</i>
     </div>
     <ul class="profile-social-links">
       <li onclick="trackClick()">
